[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.04, 0.02, 1.0)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(500, 0)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="Sep1" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="MasterRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/MasterRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBox/MasterRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="MusicRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/MusicRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBox/MusicRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 70.0

[node name="SFXRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/SFXRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBox/SFXRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="Sep2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="QualityRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="QualityLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox/QualityRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "Quality"

[node name="QualityDropdown" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/VBox/QualityRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "Low"
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2
selected = 2

[node name="Sep3" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"
